# emukit

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  _config.yml  about.md  citation.md  contact.md  firststeps.md  index.html  installation.md  manual.md  news.md  pyproject.toml  setup.cfg  setup.py
_includes/: analytics.html  disqus.html  fb-script.html  footer.html  head.html  header.html  sidebar.html
_layouts/: default.html  page.html  post.html
_posts/: 2016-05-07-documentation.md  2016-05-07-sensitivity-analysis.md  2016-06-09-bayesian-quadrature.markdown  2016-06-09-experimental-design.markdown  2016-06-09-no-image.markdown  2016-06-10-elements.markdown  2016-06-10-multifidelity-emulation.markdown  2016-06-12-bayesian-optimization.markdown  2016-06-12-usage.markdown  2016-06-13-emukit-playground.markdown  installation.markdown
_sass/: _bootstrap-readable.scss  _layout.scss  _syntax-highlighting.scss
_site/: README.md  index.html
css/: main.scss
doc/: Makefile  README.md  api.rst  conf.py  emukit_structure.rst  index.rst  installation.rst  tutorials.rst  usage.rst  vision.rst
emukit/: __init__.py  __version__.py
integration_tests/: README.md
notebooks/: EMUKIT-Max-Value-Entropy-Search-Example.ipynb  Emukit-Bayesian-optimization-benchmark.ipynb  Emukit-Bayesian-optimization-external-objective-evaluation.ipynb  Emukit-Bayesian-optimization-introduction.ipynb  Emukit-Categorical-with-Tensorflow.ipynb  Emukit-basic-use-of-the-library.ipynb  Emukit-intro.ipynb  draft.py  (+28 more)
(+491 files in other folders)
