[metadata]
description-file = README.md

[tool:pytest]
addopts =
    --verbose
    --cov emukit
    --cov-report term-missing
    tests

[coverage:run]
branch = true
source = emukit
omit = ./tests/*.py, setup.py, ./emukit/examples/*.py

[flake8]
max-line-length = 120
ignore =
    # It is ok to use lambdas instead of def
    E731
    # This conflicts with breaking binary operators into multiple lines
    E127
exclude =
    # No need to traverse our git directory
    .git,
    # And build too
    build,
    # There's no value in checking cache directories
    __pycache__
